--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>麦折优</title>
-<link rel="shortcut icon" href="./icon.ico" />
+<link rel="shortcut icon" href="./images/icon.ico" />
 <!-- Animate.css -->
 <link rel="stylesheet" href="css/animate.css">
 <!-- Icomoon Icon Fonts-->
@@ -92,7 +92,7 @@ p{margin:6px}
 	<div class="top">
 	<div class="nav">
 
-	<img src="./name.png" />
+	<img src="./images/name.png" />
 		<ul>
 			<li ><span class="active">首页	</span>	</li>
 			<li><span><a href="#product">产品</a></span> </li>
@@ -100,11 +100,11 @@ p{margin:6px}
 		</ul>
 	</div>
 
-		<img src="./mai.png"  style="width:1000px;position:absolute;top:-27px;left:-133px"/>
+		<img src="./images/mai.png"  style="width:1000px;position:absolute;top:-27px;left:-133px"/>
 	<div class="swiper-container">
 	  <div class="swiper-wrapper">
 	    <div class="swiper-slide slide1"></div>
-			<div class="swiper-slide slide2"><img  src="./banner2.png"/></div>
+			<div class="swiper-slide slide2"><img  src="./images/banner2.png"/></div>
 			<div class="swiper-slide slide1"></div>
 	  </div>
 		<div class="swiper-pagination">
@@ -168,7 +168,7 @@ p{margin:6px}
 			<div class="col-md-6 col-md-pull-6">
 				<div class="fh5co-img">
 					<figure class="fh5co-figure animate-box">
-						<img class="img-2" src="images/shop.png" alt="Free Website Template by FreeHTML5.co">
+						<img class="img-2" src="./images/shop.png" alt="Free Website Template by FreeHTML5.co">
 					</figure>
 				</div>
 			</div>
@@ -199,7 +199,7 @@ p{margin:6px}
 	</div>
 </div>
 <div  class="footer">
-	<img src="./program.jpg"  style="width:150px;"/>
+	<img src="./images/program.jpg"  style="width:150px;"/>
 	<p>
 		咨询热线 : 400-090-0245  地址 : 中国.郑州市汽配大世界21世纪小区
 	</p>
