--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ p{margin:6px}
 			<div class="col-md-6 col-md-pull-6">
 				<div class="fh5co-img">
 					<figure class="fh5co-figure animate-box">
-						<img class="img-2" src="./images/shop.png" alt="Free Website Template by FreeHTML5.co">
+						<img class="img-2" src="./images/index.png" alt="Free Website Template by FreeHTML5.co">
 					</figure>
 				</div>
 			</div>
