--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="description" content="麦折优小程序，用于优惠买单">
+	 <meta name="keywords" content="麦折优，小程序，郑州美食，推荐，优惠买单，折扣，麦折，松杉">
+	 <meta name="baidu-site-verification" content="n27LeSQQDz" />
 <title>麦折优</title>
 <link rel="shortcut icon" href="./images/icon.ico" />
 <!-- Animate.css -->
@@ -67,8 +70,11 @@ ul li{margin-right:3%;width:30%;font-size:1.4rem;font-family: fantasy;}
 .containers h2{font-size: 48px;font-weight: 300;letter-spacing: 6px}
 .containers p{margin-top:20px;width:50%;margin:0 auto;font-size:18px;font-family: serif;line-height: 28px;
 letter-spacing: 4px}
-.more{font-size:18px;padding:6px;border:1px solid #999;border-radius: 18px;width:120px;margin:0 auto;
+.more{font-size:18px;padding:6px;border:1px solid #999;
+
+	border-radius: 18px;width:120px;margin:0 auto;
 margin-top:15px}
+ul li:hover,.more:hover{cursor: pointer;}
 .footer{background: #fafafa;width: 100%;text-align: center;padding-top:35px}
 .footer p{letter-spacing: 1px}
 a{text-decoration:none;}
@@ -180,7 +186,7 @@ p{margin:6px}
 			<div class="col-md-6">
 				<div class="fh5co-copy">
 					<div class="fh5co-copy-inner">
-						<h2>优惠折扣，单单送券</h2>
+						<h2>优惠折扣，买单送券</h2>
 						<p>惊喜连连的优惠折扣，省钱还赚钱。</p>
 					</div>
 				</div>
