--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ p{margin:6px}
 		咨询热线 : 400-090-0245  地址 : 中国.郑州市汽配大世界21世纪小区
 	</p>
 	<p>
-		Copyright  ©  ©2017-2018  郑州松杉网络科技企业发展有限公司     豫ICP备15046440号
+		Copyright  ©  ©2017-2018  郑州松杉网络科技企业发展有限公司    豫ICP备18025110号-1
 	</p>
 </div>
 <script src="./js/jquery.min.js"></script>
