--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@ p{margin:6px}
 	<div style="width:400px;height:1px;margin:0 auto;background:#fc912b;margin-bottom:40px;margin-right:40%">
 	</div>
 	<p style="color:black">
-		麦折优-是河南松杉网络科技有限公司旗下的一款移动互联网产品，是一款都市人首选的高品质生活消费APP，
-		我们致力于打造一站式全方位的消费商城，平台覆盖美食、娱乐、美业和汽车等各类精品生活服务，
-		为你带来更多超值的优惠的同时给到您尊贵的产品和体验。
+麦折优是河南松杉网络科技有限公司推出的一款微信小程序。
+麦折优作为一款连接商户与消费者的本地生活服务O2O平台：
+一方面本着商户第一的原则，运用内容服务、精准营销、数据决策、金融服务等手段帮助商户降低成本、增加效率；另一方面为实现“您身边的品质生活专家”这一服务宗旨，为用户精心挑选各品类优质商户打造全方位商圈，
+实现线上互动、线下体验。麦折优，旨在为您提供最优惠的价格和最优质的服务。
 	</p>
 	<div class="more">
 		了解更多
