--- a/index.html
+++ b/index.html
@@ -23,25 +23,26 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.js"></script>
 <style>
 body,ul,h3{font-size:10px;margin:0;padding:0;font-family: "Arial"}
-.top{width: 100%;height:650px;margin-top:50px;}
+
+.top{width: 100%;height:65rem;margin-top:5rem;}
 .swiper-slide{width:100%;height:100%}
 .slide1{background: linear-gradient(to right,#ff6065,#eea765)
 }
 .slide2{background: linear-gradient(to right,#eea765,#ff6065)
 }
-.nav{position:fixed;width:100%;height:80px;
+.nav{position:fixed;width:100%;height:8rem;
 
 	color:white;z-index: 9;padding-top:24px;top:0}
 	.nav-ac{background: linear-gradient(to right,#ff6065,#eea765);}
-.nav img{margin:0;width:120px;float:left;font-size:2rem;margin-left: 40px}
+.nav img{margin:0;width:12rem;float:left;font-size:2rem;margin-left: 4rem}
 ul{width:15%;margin:0;margin-left:60%}
 ul, ul li{float:left;list-style-type:  none}
 ul li{margin-right:3%;width:30%;font-size:1.4rem;font-family: fantasy;}
-.swiper-container{position: absolute;top:0;width:100%;z-index: -1;height: 640px}
-.circle,.circle2,.circle3{border: 1px solid white;width:400px;height:400px;border-radius: 199px;position: absolute;top:0}
+.swiper-container{position: absolute;top:0;width:100%;z-index: -1;height: 64rem}
+.circle,.circle2,.circle3{border: 1px solid white;width:40rem;height:40rem;border-radius: 20rem;position: absolute;top:0}
 .circle2{left:12px;top:8px}
 .circle3{left:-8px;top:6px;transform: rotate(360deg);}
-.circles{width:400px;margin: 0 auto;position:  relative;top:80px}
+.circles{width:40rem;margin: 0 auto;position:  relative;top:8rem}
 .active{border-bottom: 2px solid white;padding-bottom: 10px}
 
 .circle,.circle2,.circle3{ -webkit-transition-property: -webkit-transform;
@@ -64,13 +65,13 @@ ul li{margin-right:3%;width:30%;font-size:1.4rem;font-family: fantasy;}
 @keyframes rotate{from{transform: rotate(0deg)}
     to{transform: rotate(359deg)}
 }
-.text h4{font-size: 38px;color:white;position:relative;top:200px;letter-spacing: 5px;font-weight: 350}
-.text p{margin-bottom: 0;font-size:22px;color:white;position:relative;top:180px;text-align: center;letter-spacing: 3px;font-weight: 400;}
+.text h4{font-size: 3.8rem;color:white;position:relative;top:20rem;letter-spacing: 5px;font-weight: 350}
+.text p{margin-bottom: 0;font-size:2.2rem;color:white;position:relative;top:180px;text-align: center;letter-spacing: 3px;font-weight: 400;}
 .containers{text-align: center}
-.containers h2{font-size: 48px;font-weight: 300;letter-spacing: 6px}
-.containers p{margin-top:20px;width:50%;margin:0 auto;font-size:18px;font-family: serif;line-height: 28px;
+.containers h2{font-size: 4.8rem;font-weight: 300;letter-spacing: 6px}
+.containers p{margin-top:2rem;width:50%;margin:0 auto;font-size:1.8rem;font-family: serif;line-height: 28px;
 letter-spacing: 4px}
-.more{font-size:18px;padding:6px;border:1px solid #999;
+.more{font-size:1.8rem;padding:0.6rem;border:1px solid #999;
 
 	border-radius: 18px;width:120px;margin:0 auto;
 margin-top:15px}
@@ -80,21 +81,28 @@ ul li:hover,.more:hover{cursor: pointer;}
 a{text-decoration:none;}
 a,a:hover,a:active,a:link,a:visited{color:white;text-decoration: none}
 .swiper-container-horizontal>.swiper-pagination-bullets{
-	bottom:65px;
+	bottom:6.5rem;
 }
-.swiper-pagination-bullet{width:50px;height:1px;background:white;opacity: 1}
+.swiper-pagination-bullet{width:5rem;height:1px;background:white;opacity: 1}
 .swiper-pagination-bullet-active{background: black}
 .iconmy{width:25px;height:42px;border-radius: 12px;border:1px solid white;position:absolute;bottom:12px
 ;z-index: 99;left:50%;margin-left: -12.5px}
-.iconmy div{width:1px;height:10px;background: white;margin:0 auto;margin-top:6px}
-.fh5co-feature{height: 730px;margin-bottom: 2rem}
+.iconmy div{width:1px;height:1rem;background: white;margin:0 auto;margin-top:6px}
+.fh5co-feature{height: 73rem;margin-bottom: 2rem}
 p{margin:6px}
 #main{margin-top:2rem}
 .fh5co-feature .fh5co-copy > .fh5co-copy-inner h2:before{background: #ff6065}
-.fh5co-copy-inner{font-size: 15px;}
-#shoplist{width:60%;margin:0 auto;padding: 40px;text-align: center;font-size:20px;color:black}
-.item{float:left;margin-right: 40px;}
-.item img{width:150px;height:150px;}
+.fh5co-copy-inner{font-size: 1.5rem;}
+#shoplist{width:70%;margin:0 auto;padding: 4rem;text-align: center;font-size:2rem;color:black}
+.item{float:left;margin-right: 4rem;}
+.item img{width:12rem;height:12rem;}
+@media screen and (max-width:600px) {
+	body{
+			font-size:60px;
+	}
+#shoplist{width:90%;}
+.containers p{width:94%}
+}
 </style>
 </head>
 <body>
@@ -145,7 +153,7 @@ p{margin:6px}
 
 <div id="product" class="containers">
 	<h2>麦折优是什么？</h2>
-	<div style="width:400px;height:1px;margin:0 auto;background:#fc912b;margin-bottom:40px;margin-right:40%">
+	<div style="width:40rem;height:1px;margin:0 auto;background:#fc912b;margin-bottom:40px;margin-right:40%">
 	</div>
 	<p style="color:black">
 麦折优是河南松杉网络科技有限公司推出的一款微信小程序。
@@ -161,7 +169,7 @@ p{margin:6px}
 <div>
 	<img src="" />
 </div>
-<div id="main" style="margin-bottom:40px;">
+<div id="main" style="margin-bottom:4rem;">
 
 	<div class="container">
 
@@ -208,14 +216,14 @@ p{margin:6px}
 
 	</div>
 </div>
-<h4 style="text-align:center;font-size:24px">
+<h4 style="text-align:center;font-size:2.4rem">
 	商户入驻
 </h4>
 <div id="shoplist">
 
 </div>
-<div  class="footer">
-	<img src="./images/program.jpg"  style="width:150px;"/>
+<div  class="footer" style="font-size:1rem">
+	<img src="./images/program.jpg"  style="width:15rem;"/>
 	<p>
 		咨询热线 : 400-090-0245  地址 : 中国.郑州市汽配大世界21世纪小区
 	</p>
