--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body,ul,h3{font-size:10px;margin:0;padding:0;font-family: "Arial"}
 }
 .nav{position:fixed;width:100%;height:8rem;
 
-	color:white;z-index: 9;padding-top:24px;top:0}
+	color:white;z-index: 9;padding-top:2.4rem;top:0}
 	.nav-ac{background: linear-gradient(to right,#ff6065,#eea765);}
 .nav img{margin:0;width:12rem;float:left;font-size:2rem;margin-left: 4rem}
 ul{width:15%;margin:0;margin-left:60%}
@@ -43,7 +43,7 @@ ul li{margin-right:3%;width:30%;font-size:1.4rem;font-family: fantasy;}
 .circle2{left:12px;top:8px}
 .circle3{left:-8px;top:6px;transform: rotate(360deg);}
 .circles{width:40rem;margin: 0 auto;position:  relative;top:8rem}
-.active{border-bottom: 2px solid white;padding-bottom: 10px}
+.active{border-bottom: 2px solid white;padding-bottom: 1rem}
 
 .circle,.circle2,.circle3{ -webkit-transition-property: -webkit-transform;
     -webkit-transition-duration: 1s;
@@ -73,10 +73,10 @@ ul li{margin-right:3%;width:30%;font-size:1.4rem;font-family: fantasy;}
 letter-spacing: 4px}
 .more{font-size:1.8rem;padding:0.6rem;border:1px solid #999;
 
-	border-radius: 18px;width:120px;margin:0 auto;
-margin-top:15px}
+	border-radius: 1.8rem;width:12rem;margin:0 auto;
+margin-top:1.5rem}
 ul li:hover,.more:hover{cursor: pointer;}
-.footer{background: #fafafa;width: 100%;text-align: center;padding-top:35px}
+.footer{background: #fafafa;width: 100%;text-align: center;padding-top:3.5rem}
 .footer p{letter-spacing: 1px}
 a{text-decoration:none;}
 a,a:hover,a:active,a:link,a:visited{color:white;text-decoration: none}
@@ -85,7 +85,7 @@ a,a:hover,a:active,a:link,a:visited{color:white;text-decoration: none}
 }
 .swiper-pagination-bullet{width:5rem;height:1px;background:white;opacity: 1}
 .swiper-pagination-bullet-active{background: black}
-.iconmy{width:25px;height:42px;border-radius: 12px;border:1px solid white;position:absolute;bottom:12px
+.iconmy{width:2.5rem;height:4.2rem;border-radius: 1.2rem;border:1px solid white;position:absolute;bottom:1.2rem
 ;z-index: 99;left:50%;margin-left: -12.5px}
 .iconmy div{width:1px;height:1rem;background: white;margin:0 auto;margin-top:6px}
 .fh5co-feature{height: 73rem;margin-bottom: 2rem}
@@ -141,10 +141,10 @@ p{margin:6px}
 </div>
 <div class="text">
 		<h4 style="text-align:center">麦折优小程序<br />不止于颜值</h4>
-		<p style="margin-top:32px">
+		<p style="margin-top:8.2rem">
 			品质生活，首选专家
 		</p>
-		<p style="font-size:20px;margin-top:5px">
+		<p style="font-size:2rem;margin-top:0.5rem">
 			我们想做些改变
 		</p>
 </div>
