--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Animate.css -->
 <link rel="stylesheet" href="css/animate.css">
 <!-- Icomoon Icon Fonts-->
-<link rel="stylesheet" href="css/icomoon.css">
+
 <!-- Bootstrap  -->
 <link rel="stylesheet" href="css/bootstrap.css">
 <!-- Theme style  -->
@@ -27,10 +27,10 @@
 @font-face {
 	font-family: 'siyuan';
 
-	src: url('./font/思源黑体.eot');
-	 src:url('./font/思源黑体.woff') format('woff'),
-			 url('./font/思源黑体.ttf') format('truetype'),
-			 url('./font/思源黑体.svg') format('svg');
+	src: url('../fonts/思源黑体.eot');
+	 src:url('../fonts/思源黑体.woff') format('woff'),
+			 url('../fonts/思源黑体.ttf') format('truetype'),
+			 url('../fonts/思源黑体.svg') format('svg');
 }
 body,ul,h3{font-size:10px;margin:0;padding:0;font-family: "siyuan"}
 
@@ -121,6 +121,8 @@ p{margin:6px}
 	}
 #shoplist{width:90%;}
 .containers p{width:94%}
+.piccc, .pics{display: none}
+.text-con{text-align: center;}
 }
 .point{animation: flow 2s 1;font-size: 5.3rem;margin-left: 1.4rem;margin-right: 1.4rem;position: relative;top:-0.8rem}
 	@keyframes flow {
@@ -178,7 +180,7 @@ p{margin:6px}
 					</p>
 				</div></div>
 				<div class="swiper-slide slide3"><img  src="./images/three.png"/>
-								<img style="position: absolute;bottom:14rem;right:20%;width:40rem" src="./images/threes.png" />
+								<img class="piccc" style="position: absolute;bottom:14rem;right:20%;width:40rem" src="./images/threes.png" />
 						<p class="eng">
 							INTRODUCT OF THE PROGRAM
 						</p>
